--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,13 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_google_maps:
+    path: ../flutter_google_maps
+
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.7
+  google_maps_flutter: ^2.10.0
+  geolocator: ^13.0.2
 
 dev_dependencies:
   flutter_test:
