--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
 
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.7
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
