--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="frequent_flow"
@@ -33,7 +38,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="<YOUR_MAPS_API_KEY>"/>
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCHn51ONuk3kBDPwNz1wow8SYS3T9zG25c"/>
         <meta-data
             android:name="com.google.android.gms.appstate.APP_ID"
             android:value="103061525276-j8kohi4keh3hen230hrtpbtv1jinc6j7.apps.googleusercontent.com" />
