--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,6 +47,12 @@
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
     <string>This app needs access to your location.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>We need access to your camera to capture photos and videos.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>We need access to your microphone to record audio.</string>
+    <key>NSContactsUsageDescription</key>
+    <string>We need access to your contacts to enhance your experience by syncing your data.</string>
     <key>GIDClientID</key>
     <string>103061525276-rq0ll50s081b6nh8da4i79rr9ufq9sjv.apps.googleusercontent.com</string>
     <key>CFBundleURLTypes</key>
