--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   multi_auth:
     path: ../multi_auth
 
+  flutter_permissions:
+    path: ../flutter_permissions
+
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.7
   geolocator: ^13.0.2
