--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.7
   shared_preferences: ^2.2.0
+  flutter_timezone: ^1.0.8
+  country_picker: ^2.0.20
+  country_code_picker: ^3.0.0
 
 dev_dependencies:
   flutter_test:
