--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
 #  google_sign_in: ^6.2.2
   shared_preferences: ^2.3.3
   google_maps_flutter: ^2.10.0
+  firebase_core: ^3.8.0
+  firebase_messaging: ^15.1.5
+  dio: ^5.7.0
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
