--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,10 @@ dependencies:
     sdk: flutter
 
   flutter_google_maps:
-    path: ../flutter_google_maps
+    path: /Users/rohitbarge/Documents/New Topics/frequent flow modules
 
   multi_auth:
-    path: ../multi_auth
+    path: /Users/rohitbarge/Documents/New Topics/frequent_flow_multi_auth
 
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.7
