--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   geolocator: ^13.0.2
 #  google_sign_in: ^6.2.2
   google_maps_flutter: ^2.10.0
+  pinput: ^4.0.0
 
 dev_dependencies:
   flutter_test:
