--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   equatable: ^2.0.7
   pinput: ^4.0.0
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
