--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,9 +56,10 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
-        targetSdkVersion 33  // Update to 33 or higher
+        targetSdkVersion 34  // Update to 33 or higher
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     signingConfigs {
