--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,10 +1,8 @@
 plugins {
-    id "com.android.application"
-    // START: FlutterFire Configuration
-    id 'com.google.gms.google-services'
-    // END: FlutterFire Configuration
-    id "kotlin-android"
-    id "dev.flutter.flutter-gradle-plugin"
+    id 'com.android.application'
+    id 'com.google.gms.google-services' // Remove version here
+    id 'org.jetbrains.kotlin.android' version '1.9.22'
+    id 'dev.flutter.flutter-gradle-plugin'
 }
 
 def localProperties = new Properties()
